--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lista de Cursos de DevOps da Alura</title>
+    <title>Cursos da Alura</title>
 </head>
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Curso Ansible</li>
-        <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
+        <li>Docker</li>
+        <li>Ansible</li>
+        <li>Integração Contínua</li>
     </ul>
 </body>
 </html>
